2003-02-03  Jakub Jelinek  <jakub@redhat.com>

	* config/alpha/elf.h (DO_SELECT_SECTION): Handle __thread variables.
	(SELECT_SECTION, UNIQUE_SECTION): Likewise.

2003-01-15  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (find_lo_sum_using_gp): Rename from find_lo_sum;
	also check that GP is being used.
	(alpha_find_lo_sum_using_gp): New.
	(alpha_does_function_need_gp): Use get_attr_usegp.
	* config/alpha/alpha-protos.h: Update.
	* config/alpha/alpha.md (attr usegp): New.  Annotate patterns
	as needed.

2003-01-06  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (alpha_encode_section_info): Adjust symbol_str
	properly when changing "local-ness".

2002-09-27  Jakub Jelinek  <jakub@redhat.com>

	* config/alpha/alpha.c (alpha_encode_section_info): Use
	decl_tls_model.

2002-06-11  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (ALPHA_BUILTIN_THREAD_POINTER): New.
	(ALPHA_BUILTIN_SET_THREAD_POINTER): New.
	(code_for_builtns): Update.
	(alpha_init_builtins): Add __builtin_thread_pointer and
	__builtin_set_thread_pointer.
	(alpha_expand_builtin): Handle void builtins.
	* doc/extend.texi (Alpha Built-in Functions): Update.

2002-06-02  Roger Sayle  <roger@eyesopen.com>

	* config/alpha/alpha.h [ASM_OUTPUT_LABELREF]: Fix typo.

2002-05-31  Richard Henderson  <rth@redhat.com>

	* configure.in (HAVE_AS_TLS): Add alpha tests.
	* configure: Rebuild.
	* config/alpha/alpha.c (TARGET_AS_TLS): New.
	(alpha_tls_size, alpha_tls_size_string): New.
	(overide_options): Set it.  Always install machine_status hooks.
	(input_operand): Accept got tls predicates.
	(local_symbol_p): Merge into ...
	(local_symbolic_operand): ... here.  Reject tls symbols.
	(global_symbolic_operand): Likewise.
	(tls_symbolic_operand_1, dtp16_symbolic_operand): New.
	(dtp32_symbolic_operand, gotdtp_symbolic_operand): New.
	(tp16_symbolic_operand, tp32_symbolic_operand): New.
	(gottp_symbolic_operand, tls_symbolic_operand_type): New.